# $Id$

2010-10-21 <mm@FreeBSD.org>
	* remove references to smbldap_conf.pm

2008-04-22 <jtournier@gmail.com>
	* new tag 0.9.5

2008-04-13 <jtournier@gmail.com>
	* smbldap-useradd: new option '-W' to add a computer account with samba 	attributes (for account creation
	through samba, use '-w')
	* smbldap_tools.pm: added ldaps support
	* smbldap.conf: new option 'ldapSSL' for SSL support

2008-03-05 <jtournier@gmail.com>
	* smbldap-usershow: if nscd is up dans running, restart the service
	(http://gna.org/bugs/?11206)

2008-02-17 <jtournier@gmail.com>
	* smbldap-populate: remove sambaNextRid entry if ${sambaDomain} is not 
	used for ${sambaUnixIdPooldn} entry
	(sambaDomain objectclass is then not added to ${sambaUnixIdPooldn})

2008-02-15 <jtournier@gmail.com>
	* smbldap-usermod: if "-I" is used, set sambaPwdLastSet to the current 
	time
	* smbldap-useradd: if '-k /etc/skel" is used, /etc/skel content is now 
	correctly copied to home directory

2007-12-18 <jtournier@gmail.com>
	* smbldap-usermod, smbldap-passwd (smbldap-passwd is asked by 
	smbldap-useradd): if "-B 1" is used, set sambaPwdLastSet to 0
	(https://gna.org/support/?1828)

2007-12-17 <jtournier@gmail.com>
	* smbldap-usermod, smbldap-useradd: new -Z option to add custom LDAP
	attributes

2007-11-26 <jtournier@gmail.com>
	* smbldap-groupadd: added sncd status and restart service after
	applying modifications
	(https://gna.org/bugs/index.php?10313)

	* smbldap-passwd: unix password not updated if maxPasswordAge not
	defined in smbldap.Conf => added control test
	(https://gna.org/bugs/?10230)

	* smbldap-usershow: new -h option to print dates in human-readable form
	(https://gna.org/bugs/?10231)

2007-11-23 <jtournier@gmail.com>
	* smbldap-usermod: fixes and enhancements relative to expirations dates
	(https://gna.org/bugs/?10229)

2007-10-30 <jtournier@gmail.com>
	* smbldap_tools.pm (read_user): do not print binary data in
	smbldap-usershow
	(https://gna.org/bugs/?10228)

2007-09-17 <jtournier@gmail.com>